--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
-        arguments: build
-    - name: Build with Gradle (without tests)
-      run: ./gradlew build -x test
+        arguments: build -x test
+    # - name: Build with Gradle (without tests)
+    #   run: ./gradlew build -x test
 
