[feat] 질문 기능 개발
- 서비스와 컨트롤러 정상 동작에 대한 테스트만 작성(에러 상황에 대한 테스트 x)
- 테스트 완료
- 이 후, 리팩토링이 필요한 부분은 있음

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     username: ${LOCAL_DB_HOST}
     password: ${LOCAL_DB_PASSWORD}
 
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -13,15 +14,15 @@ spring:
       hibernate:
         #        show-sql: true
         format_sql: true
-    defer-datasource-initialization: true
 
-  jackson:
-    property-naming-strategy: SNAKE_CASE
+    defer-datasource-initialization: true
 
   sql:
     init:
-      mode: always
+      mode: never
 
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 #  redis:
 #    host: localhost
