--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,10 +22,16 @@ spring:
     init:
       mode: always
 
+  security:
+    jwt:
+      header: Authorization
+      secret: ${JWT_SECRET_KEY}
+      access-token-validity-in-seconds: 86_400     # 1일
+      refresh-token-validity-in-seconds: 1_209_600  # 2주
 
-#  redis:
-#    host: localhost
-#    port: 6379
+    redis:
+      host: localhost
+      port: 6379
 
 logging.level:
   org.hibernate.SQL: debug
