--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Run chmod to make gradlew executable
-        run: chmod +x ./gradlew test -i
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
