refactor : application.yml, gradle.yml 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,12 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      - name: Set yml
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: ./src/main/resources/application.yml
+        env:
+          spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
 
