refactor : gradle.yml, TokenProvider 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Set yml
+      - name: Set test yml
         uses: microsoft/variable-substitution@v1
         with:
           files: ./src/test/resources/application.yml
