--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
 
+    //S3
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
+
     //AOP
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
