refactor : 코드 리뷰 후 변경사항 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,16 +22,17 @@ spring:
     init:
       mode: always
 
+
+  redis:
+    serialization:
+      class-property-type-name: RefreshToken.class
+
   security:
     jwt:
       header: Authorization
       secret: ${JWT_SECRET_KEY}
-      access-token-validity-in-seconds: 86_400     # 1일
+      access-token-validity-in-seconds: 600     # 10분
       refresh-token-validity-in-seconds: 1_209_600  # 2주
-
-    redis:
-      host: localhost
-      port: 6379
 
 logging.level:
   org.hibernate.SQL: debug
