[feat] 이미지 관련 기능 개발 1차 완료
- 업로드와 삭제 기능 구현
- 테스트 코드까지 구현
- 리뷰 받은 후 리팩토링 예정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,11 @@ cloud:
     stack.auto: false
     region.static: ${S3_REGION}
     credentials:
-      accessKey: ${S3_ACCESS_KEY}
-      secretKey: ${S3_SECRET_KEY}
+      accessKey: ${AWS_ACCESS_KEY}
+      secretKey: ${AWS_ACCESS_SECRET}
+
+custom:
+  domain:
+    image:
+      baseUrl: ${BASE_URL}
 
