[setting] 엘라스틱 서치 임시 세팅

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,13 @@ spring:
       access-token-validity-in-seconds: 600     # 10분
       refresh-token-validity-in-seconds: 1_209_600  # 2주
 
+  elasticsearch:
+    rest:
+      uris: http://localhost:9200
+      username: elastic
+      password: elastic_password
+
+
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
