[feat] 검색 기능 개발 1차 구현
- 엘라스틱 서치 세팅에 문제가 있는지 아직 정상 동작은 안됨

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
     rest:
       uris: http://localhost:9200
       username: elastic
-      password: elastic_password
+      password: KernelSquare
 
 
 logging.level:
