refactor : logout 시 api 호출 정상적으로 동작하지 않던 이슈 수정 및 JWTCheckFilter 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     jwt:
       header: Authorization
       secret: ${JWT_SECRET_KEY}
-      access-token-validity-in-seconds: 86_400     # 1일
+      access-token-validity-in-seconds: 3600     # 1시간
       refresh-token-validity-in-seconds: 1_209_600  # 2주
 
   jpa:
