--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
     jwt:
       header: Authorization
       secret: ${JWT_SECRET_KEY}
-      access-token-validity-in-seconds: 600     # 10분
+      access-token-validity-in-seconds: 3600     # 1시간
       refresh-token-validity-in-seconds: 1_209_600  # 2주
 
 logging.level:
