#76 #77 프로메테우스 & 그라파나 세팅

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,11 @@ custom:
     image:
       baseUrl: ${BASE_URL}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health, info, metrics
+#  observations:
+#    key-values:
+#      application: KS_SingleModule  #태그
