AOP 추가작업 - 시큐리티 로그레벨 수정, 메서드명 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
-  org.springframework.security: debug
+  org.springframework.security: warn
 
 cloud:
   aws:
