--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,16 +12,18 @@ on:
   pull_request:
     branches: [ "main" ]
 
-
-
-
 permissions:
   contents: read
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    services:
+      redis:
+        image: redis:latest
+        ports:
+          - 6379:6379
 
     steps:
       - uses: actions/checkout@v3
