#85 예약 게시글 생성 (테스트 포함)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
-  org.springframework.security: warn
+  org.springframework.security: debug
 
 cloud:
   aws:
