--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     username: ${LOCAL_DB_HOST}
     password: ${LOCAL_DB_PASSWORD}
 
+  flyway:
+    enabled: false
+
   security:
     jwt:
       header: Authorization
