[feat] 기술 스택 크롤링 파일 1차 완료
- 데이터는 약 7만개
- 전부 크롤링 하는 것은 상당히 오래 걸리기 때문에, 두 번째 크롤링부터는 변경 사항만 크롤링하는 방법이 필요해 보임

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,12 @@ dependencies {
     //flyway
     implementation 'org.flywaydb:flyway-mysql'
 
+    //crawling
+    implementation 'org.jsoup:jsoup:1.15.3'
+
+    //jdbc mysql
+    implementation 'mysql:mysql-connector-java:8.0.23'
+
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
