[feat] 채팅방 입장 기능 구현
- 테스트 코드 미구현
- 소켓 관련 설정도 포함

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,23 @@ dependencies {
     //flyway
     implementation 'org.flywaydb:flyway-mysql'
 
+    //websocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    // ====> 소켓 통신의 임시 화면을 위함, 정식 화면이 생기면 삭제 할 것 !!
+    implementation 'org.webjars:sockjs-client:1.1.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3-1'
+
+    //view
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.webjars.bower:bootstrap:4.3.1'
+    implementation 'org.webjars.bower:vue:2.5.16'
+    implementation 'org.webjars.bower:axios:0.17.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    // <====
+
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
