--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,11 @@ jobs:
           files: ./src/test/resources/application.yml
         env:
           spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
+          custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
+          cloud.aws.s3.bucket: ${{ secrets.S3_BUCKET_NAME }}
+          cloud.aws.region.static: ${{ secrets.S3_REGION }}
+          cloud.aws.credentials.accessKey: ${{ secrets.AWS_ACCESS_KEY }}
+          cloud.aws.credentials.secretKey: ${{ secrets.AWS_ACCESS_SECRET }}
       - name: Set main yml
         uses: microsoft/variable-substitution@v1
         with:
