[test] secrets 키들이 제대로 들어가는지 echo

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,10 +41,10 @@ jobs:
 
       - name: Check Environment Variables
         run: |
-          echo JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
-          echo S3_REGION=${{ secrets.S3_REGION }}
-          echo $JWT_SECRET_KEY
-          echo $S3_REGION
+          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}"
+          echo "S3_REGION=${{ secrets.S3_REGION }}"
+          echo "$JWT_SECRET_KEY"
+          echo "$S3_REGION"
       
 
       # - name: Set test yml
