[test] 워크플로우 작동하지는 확인

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,8 +13,8 @@ name: Java CI with Gradle
 #  AWS_ACCESS_SECRET: ${{ secrets.AWS_ACCESS_SECRET }}
 
 on:
-  push:
-    branches: [ "main" ]
+#  push:
+#    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
