[test] 워크플로우 테스트
- origin에서 테스트가 통과되어야 push가 되게끔 해보는건?

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,10 +7,10 @@ env:
   DEPLOYMENT_GROUP_NAME: KernelSquareDeployGroup
 
 on:
-  push:
-    branches: [ "main" ]
-#  pull_request:
+#  push:
 #    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   contents: read
