--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,8 @@ on:
 #  push:
 #    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - main
 
 permissions:
   contents: read
