[test] 워크플로우 테스트
- origin에서 테스트가 통과되어야 push가 되게끔 해보는건?

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,8 +7,9 @@ env:
   DEPLOYMENT_GROUP_NAME: KernelSquareDeployGroup
 
 on:
-#  push:
-#    branches: [ "main" ]
+  push:
+    branches-ignore:
+      - main
   pull_request:
     branches-ignore:
       - main
