--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,9 +10,9 @@ on:
   push:
     branches-ignore:
       - main
-  pull_request:
-    branches-ignore:
-      - main
+#  pull_request:
+#    branches-ignore:
+#      - main
 
 permissions:
   contents: read
@@ -39,7 +39,7 @@ jobs:
         with:
           files: ./src/test/resources/application.yml
         env:
-          spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
+#          spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
           custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
           cloud.aws.s3.bucket: ${{ secrets.S3_BUCKET_NAME }}
           cloud.aws.region.static: ${{ secrets.S3_REGION }}
