[CI] 워크플로우 동작 확인

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,7 @@ on:
   pull_request:
     branches: [ "main" ]
   pull_request_target:
-    types: [CI]
+    types: [labeled]
 
 permissions:
   contents: read
@@ -20,6 +20,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: contains(github.event.pull_request.labels.*.name, 'CI')
 
     services:
       redis:
