[feat] stomp과 kafka 연동 1차 완료
- kafka 브로커 서버는 현재 1개

--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     // <====
 
+    //kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
