--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,6 +59,10 @@ spring:
     cache: false
 # <====
 
+  data:
+    mongodb:
+      uri: ${MONGO_URL}
+
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
