[chore] 워크플로우 몽고db 초기설정 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,10 @@ jobs:
         image: mongo:latest
         ports:
           - 27017:27017
+        env:
+          MONGO_INITDB_DATABASE: test
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: 1231
 
     steps:
       - uses: actions/checkout@v3
