[chore] kafka 깃허브 액션 환경에서 돌아가게 수정 시도 4차

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -71,5 +71,12 @@ jobs:
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Docker Compose For Test
+        run: |
+          touch docker-compose.yml
+          echo "${{ CI_DOCKER_COMPOSE }}" > docker-compose.yml
+          echo docker-compose.yml
+          docker-compose up -d
+
       - name: Test with Gradle
         run: ./gradlew test
