[chore] kafka 깃허브 액션 환경에서 돌아가게 수정 시도 6차

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Docker Compose For Test
         run: |
           touch docker-compose.yml
-          echo "${{ CI_DOCKER_COMPOSE }}" > docker-compose.yml
+          echo "${{ secrets.CI_DOCKER_COMPOSE }}" > docker-compose.yml
           echo docker-compose.yml
           docker-compose up -d
 
