setting : build.gradle bootJar 및 jar 설정 추가

--- a/admin-api/build.gradle
+++ b/admin-api/build.gradle
@@ -102,3 +102,11 @@ bootJar {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+    enabled = true
+}
+
+tasks.named('jar') {
+    enabled = false
+}
