--- a/domain-mysql/build.gradle
+++ b/domain-mysql/build.gradle
@@ -52,3 +52,11 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+    enabled = false
+}
+
+tasks.named('jar') {
+    enabled = true
+}
