--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -102,3 +102,11 @@ bootJar {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+    enabled = true
+}
+
+tasks.named('jar') {
+    enabled = false
+}
