--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,6 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
   pull_request_target:
     types: [opened, reopened, synchronize, labeled]
 
@@ -13,10 +9,12 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     if: |
       (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize') &&
-      contains(github.event.pull_request.labels.*.name, 'CI')
+      contains(github.event.pull_request.labels.*.name, 'CI') &&
+      github.event.pull_request.base.ref == 'main'
+
+		runs-on: ubuntu-latest
 
     services:
       redis:
@@ -24,35 +22,11 @@ jobs:
         ports:
           - 6379:6379
 
-      # mongodb:
-      #   image: mongo:latest
-      #   ports:
-      #     - 27017:27017
-      #   env:
-      #     MONGO_INITDB_DATABASE: test
-      #     MONGO_INITDB_ROOT_USERNAME: root
-      #     MONGO_INITDB_ROOT_PASSWORD: 1231
-
-      # zookeeper:
-      #   image: confluentinc/cp-zookeeper:latest
-      #   ports:
-      #     - 2181:2181
-
-      # kafka:
-      #   image: confluentinc/cp-kafka:latest
-      #   ports:
-      #     - 9092:9092
-      #   depends_on:
-      #     - zookeeper
-
-
-      kafka:
-        image: wurstmeister/kafka:latest
-        ports:
-          - "9092:9092"
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -75,13 +49,6 @@ jobs:
 
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
-
-      - name: Docker Compose For Test
-        run: |
-          touch docker-compose.yml
-          echo "${{ secrets.CI_DOCKER_COMPOSE }}" > docker-compose.yml
-          echo docker-compose.yml
-          docker-compose up -d
 
       - name: Test with Gradle
         run: ./gradlew test
