--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,5 +50,13 @@ jobs:
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
 
+      - name: Docker Compose For Test
+        run: |
+          touch docker-compose.yml
+          echo "${{ secrets.CI_DOCKER_COMPOSE }}" > docker-compose.yml
+          echo docker-compose.yml
+          docker-compose up -d
+          docker ps
+
       - name: Test with Gradle
         run: ./gradlew test
