[test] 채팅 내역 조회 테스트 + 파일 및 메서드 명 변경

--- a/domain-mongodb/build.gradle
+++ b/domain-mongodb/build.gradle
@@ -11,6 +11,12 @@ java {
     sourceCompatibility = '21'
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -27,6 +33,9 @@ dependencies {
 
     //mongodb
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+    //Test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 
