--- a/admin-api/src/test/resources/application.yml
+++ b/admin-api/src/test/resources/application.yml
@@ -48,6 +48,10 @@ spring:
     serialization:
       class-property-type-name: RefreshToken.class
 
+  data:
+    mongodb:
+      uri: ${MONGO_TEST_URI}
+
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
