--- a/admin-api/build.gradle
+++ b/admin-api/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.asciidoctor.convert' version '1.5.9.2'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.kernelsquare'
