[bugfix] 몽고db 레포지토리 save 안되는 문제 해결

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -38,6 +38,10 @@ spring:
     serialization:
       class-property-type-name: RefreshToken.class
 
+  data:
+    mongodb:
+      uri: ${MONGO_URI}
+
   security:
     jwt:
       header: Authorization
