--- a/domain-mysql/build.gradle
+++ b/domain-mysql/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     //flyway
+    implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
 
     //Test
