--- a/member-api/src/test/resources/application.yml
+++ b/member-api/src/test/resources/application.yml
@@ -1,15 +1,32 @@
 spring:
   datasource:
-    #    ToDo service test 부분 mocking 작업이 끝나면 추가 작업할 예정
-    #    url: ${TEST_DB_URL}
-    #    url: jdbc:h2:mem:test_kernel_square;MODE=MySQL
-    url: jdbc:h2:mem:test_kernel_square
-    driver-class-name: org.h2.Driver
-    username: ${LOCAL_DB_HOST}
-    password: ${LOCAL_DB_PASSWORD}
+    url: ${TEST_DB_URL}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${TEST_DB_HOST}
+    password: ${TEST_DB_PASSWORD}
 
-  flyway:
-    enabled: false
+  jpa:
+    hibernate:
+      ddl-auto: none
+
+    properties:
+      hibernate:
+        format_sql: true
+
+    database: mysql
+
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
+  redis:
+    serialization:
+      class-property-type-name: RefreshToken.class
+
+  data:
+    mongodb:
+      uri: ${MONGO_TEST_URI}
 
   security:
     jwt:
@@ -18,45 +35,14 @@ spring:
       access-token-validity-in-seconds: 3600     # 1시간
       refresh-token-validity-in-seconds: 1_209_600  # 2주
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-
-    properties:
-      hibernate:
-        #        show-sql: true
-        format_sql: true
-    #        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-
-    database-platform: org.hibernate.dialect.H2Dialect
-
-    defer-datasource-initialization: true
-
-  sql:
-    init:
-      mode: never
-
-  jackson:
-    property-naming-strategy: SNAKE_CASE
-
-  #  data:
-  #    redis:
-  #      host: localhost
-  #      port: 6380
-
-  redis:
-    serialization:
-      class-property-type-name: RefreshToken.class
+  flyway:
+    enabled: false
+    baseline-on-migrate: true
 
 logging.level:
   org.hibernate.SQL: debug
   #  org.hibernate.type: trace
   org.springframework.security: debug
-
-custom:
-  domain:
-    image:
-      baseUrl: ${BASE_URL}
 
 cloud:
   aws:
@@ -67,3 +53,8 @@ cloud:
     credentials:
       accessKey: ${AWS_ACCESS_KEY}
       secretKey: ${AWS_ACCESS_SECRET}
+
+custom:
+  domain:
+    image:
+      baseUrl: ${BASE_URL}
